--- a/src/main/resources/org/uludag/bmb/fxml/saveSharedFileScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/saveSharedFileScene.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1%22%3E">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="401.0" prefWidth="600.0">
          <children>
             <TreeView fx:id="selectShareFolderTreeView" layoutX="181.0" layoutY="14.0" onMouseClicked="#getCloudPath" prefHeight="253.0" prefWidth="276.0" />
-            <Button fx:id="saveSharedToFolderBtn" layoutX="238.0" layoutY="339.0" mnemonicParsing="false" onAction="#saveSharedToFolder" prefHeight="25.0" prefWidth="139.0" text="Button" />
-            <TextField fx:id="cloudPathTXT" layoutX="181.0" layoutY="288.0" prefHeight="25.0" prefWidth="276.0" promptText="Kaydetmek Istediğiniz klasörü seçiniz" />
+            <Button fx:id="saveSharedToFolderBtn" layoutX="238.0" layoutY="339.0" mnemonicParsing="false" onAction="#saveSharedToFolder" prefHeight="25.0" prefWidth="139.0" text="Dosyayı Kaydet" />
+            <TextField fx:id="cloudPathTXT" editable="false" layoutX="181.0" layoutY="288.0" prefHeight="25.0" prefWidth="276.0" promptText="Kaydetmek Istediğiniz klasörü seçiniz" />
          </children>
       </AnchorPane>
    </children>
