--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -52,53 +52,59 @@
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="800.0" minWidth="1300.0" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
-    <SplitPane cacheShape="false" centerShape="false" dividerPositions="0.2505567928730512, 0.5" focusTraversable="false" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane maxWidth="250.0" minWidth="200.0" prefWidth="250.0" style="-fx-background-color: #f7f5f2;" SplitPane.resizableWithParent="false">
-          <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefHeight="21.0" prefWidth="200.0" style="&#10;" text="Dosya Dizinleri" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0">
-              <font>
-                <Font size="18.0" fx:id="x1" />
-              </font>
-            </Label>
+   <children>
+      <SplitPane cacheShape="false" centerShape="false" dividerPositions="0.2505567928730512, 0.5" focusTraversable="false" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
+         <items>
+            <AnchorPane maxWidth="250.0" minWidth="200.0" prefWidth="250.0" style="-fx-background-color: #f7f5f2;" SplitPane.resizableWithParent="false">
+               <children>
+                  <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefHeight="21.0" prefWidth="200.0" style="&#10;" text="Dosya Dizinleri" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0">
+                     <font>
+                        <Font size="18.0" fx:id="x1" />
+                     </font>
+                  </Label>
                   <TreeView fx:id="directoriesHierarchyView" layoutX="10.0" layoutY="58.0" onMouseClicked="#hierarchySelectFolder" prefHeight="299.0" prefWidth="230.0" style="-fx-background-color: #fbfaf9;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
-                  <Label layoutX="36.0" layoutY="377.0" prefHeight="46.0" prefWidth="189.0" text="Hesabımla Paylaşılan Dosyalar" textAlignment="CENTER" wrapText="true" AnchorPane.bottomAnchor="379.0" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="25.0">
+                  <Label layoutX="36.0" layoutY="389.0" prefHeight="46.0" prefWidth="189.0" text="Hesabımla Paylaşılan Dosyalar" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="389.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="recievedFilesList" layoutX="14.0" layoutY="429.0" onMouseClicked="#showRecieverInfo" prefHeight="285.0" prefWidth="230.0" styleClass="recievedFileColumn" AnchorPane.bottomAnchor="84.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="429.0">
-                    <columns>
-                      <TableColumn fx:id="recievedFileDecryptedName" minWidth="230.0" prefWidth="230.0" sortable="false">
-                        <cellValueFactory>
-                           <PropertyValueFactory property="decryptedName" />
-                        </cellValueFactory>
-                      </TableColumn>
-                      <TableColumn fx:id="recievedFileSenderEmail" minWidth="100.0" prefWidth="100.0" sortable="false" text="Gönderen" visible="false">
-                        <cellValueFactory>
-                           <PropertyValueFactory property="senderEmail" />
-                        </cellValueFactory>
-                      </TableColumn>
-                    </columns>
+                  <TableView fx:id="recievedFilesList" layoutX="14.0" layoutY="447.0" onMouseClicked="#showRecieverInfo" prefHeight="267.0" prefWidth="230.0" styleClass="recievedFileColumn" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="447.0">
+                     <placeholder>
+                        <Label text="" />
+                     </placeholder>
+                     <columns>
+                        <TableColumn fx:id="recievedFileDecryptedName" minWidth="230.0" prefWidth="230.0" sortable="false">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="decryptedName" />
+                           </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="recievedFileSenderEmail" minWidth="100.0" prefWidth="100.0" sortable="false" text="Gönderen" visible="false">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="senderEmail" />
+                           </cellValueFactory>
+                        </TableColumn>
+                     </columns>
                      <contextMenu>
                         <ContextMenu>
-                          <items>
-                            <MenuItem mnemonicParsing="false" onAction="#saveSelectedRecievedFile" text="Kaydet" />
-                          </items>
+                           <items>
+                              <MenuItem mnemonicParsing="false" onAction="#saveSelectedRecievedFile" text="Kaydet" />
+                           </items>
                         </ContextMenu>
                      </contextMenu>
                   </TableView>
                   <Separator fx:id="d" layoutX="-6.0" layoutY="374.0" prefHeight="3.0" prefWidth="258.0" />
                   <Label fx:id="lblSender" layoutX="76.0" layoutY="747.0" prefHeight="21.0" prefWidth="95.0" text="Gönderen" textAlignment="CENTER" visible="false" wrapText="true" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="76.0" AnchorPane.rightAnchor="79.0" />
-                  <Label fx:id="lblSenderEmail" layoutX="4.0" layoutY="763.0" prefHeight="46.0" prefWidth="239.0" text="Label" textAlignment="CENTER" visible="false" wrapText="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="7.0" />
-          </children>
-        </AnchorPane>
-      <AnchorPane id="Content" fx:id="middlePane" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="400.0" prefWidth="794.0" style="-fx-background-color: white;">
-        <children>
+                  <Label fx:id="lblSenderEmail" layoutX="7.0" layoutY="763.0" prefHeight="46.0" prefWidth="236.0" text="Label" textAlignment="CENTER" visible="false" wrapText="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane id="Content" fx:id="middlePane" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="400.0" prefWidth="794.0" style="-fx-background-color: white;">
+               <children>
                   <Button id="upload" fx:id="btnUpload" layoutX="8.0" layoutY="59.0" mnemonicParsing="false" onAction="#uploadSelectedFile" prefHeight="25.0" prefWidth="106.0" styleClass="btnMainMenu" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="59.0" />
                   <Button id="download" fx:id="btnDownload" layoutX="130.0" layoutY="59.0" mnemonicParsing="false" onAction="#downloadSelectedFile" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text=" Download" textFill="WHITE" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="59.0" />
                   <TableView fx:id="fileListView" layoutX="10.0" layoutY="103.0" onMouseClicked="#showSelectedFileDetails" prefHeight="695.0" prefWidth="784.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="103.0">
+                     <placeholder>
+                        <Label text="" />
+                     </placeholder>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
@@ -133,66 +139,75 @@
                               <PropertyValueFactory property="changeStatus" />
                            </cellValueFactory>
                         </TableColumn>
+                        <TableColumn fx:id="fileViewerCount" editable="false" minWidth="-1.0" prefWidth="-1.0" styleClass="ctwChange" text="Kimler Erişebilir">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="viewers" />
+                           </cellValueFactory>
+                        </TableColumn>
                      </columns>
                      <contextMenu>
                         <ContextMenu>
-                          <items>
+                           <items>
                               <MenuItem fx:id="ctwMenuShare" mnemonicParsing="false" onAction="#shareSelectedFiles" text="Paylaş" />
                               <MenuItem fx:id="ctwMenuDownload" mnemonicParsing="false" onAction="#downloadSelectedFile" text="İndir" />
                               <MenuItem fx:id="ctwMenuDelete" mnemonicParsing="false" onAction="#deleteSelectedFiles" text="Sil" />
                               <MenuItem fx:id="ctwMenuSyncOn" mnemonicParsing="false" onAction="#changeSyncStatusOn" text="Sync Aç" />
                               <MenuItem fx:id="ctwMenuSyncOff" mnemonicParsing="false" onAction="#changeSyncStatusOff" text="Sync Kapat" />
+                              <MenuItem fx:id="ctwOpenLocalFolder" mnemonicParsing="false" onAction="#openFileDirectory" text="Bulunduğu Klasörü Aç" />
 
-                          </items>
+                           </items>
                         </ContextMenu>
                      </contextMenu>
                   </TableView>
                   <SplitPane fx:id="selectedDirectoryPathPane" layoutX="16.0" layoutY="14.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="744.0" styleClass="pathLinkPane" />
                   <Button fx:id="btnNewFolder" layoutX="238.0" layoutY="60.0" mnemonicParsing="false" onMouseClicked="#createNewFolder" prefHeight="24.0" prefWidth="31.0" style="-fx-background-color: black;" styleClass="newFolder" />
-        </children>
+               </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
                </padding>
-      </AnchorPane>
-        <AnchorPane cache="true" maxWidth="250.0" minWidth="200.0" prefWidth="250.0">
-          <children>
+            </AnchorPane>
+            <AnchorPane cache="true" maxWidth="250.0" minWidth="200.0" prefWidth="250.0">
+               <children>
                   <Pane prefHeight="35.0" prefWidth="250.0" style="-fx-border-color: transparent transparent black transparent; -fx-border-width: 2;" AnchorPane.rightAnchor="0.0">
                      <children>
                         <Button fx:id="btnShowNotification" layoutX="215.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#showNotifications" styleClass="icon-button" text="Button" />
                         <Circle fx:id="notificationDot" disable="true" fill="#ff1f1f" layoutX="220.0" layoutY="22.0" radius="8.0" stroke="BLACK" strokeType="INSIDE" visible="false" />
                      </children>
                   </Pane>
-                  <Pane fx:id="fileDetailPane" layoutY="34.0" prefHeight="764.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <Pane fx:id="fileDetailPane" layoutY="34.0" prefHeight="764.0" prefWidth="250.0" AnchorPane.rightAnchor="0.0">
                      <children>
-                  <Label alignment="CENTER" font="$x1" layoutX="49.0" layoutY="21.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" />
-                        <Label fx:id="lblFileName" layoutX="5.0" layoutY="363.0" prefHeight="17.0" prefWidth="80.0" text="Dosya Adı">
+                        <Label fx:id="lbl1" alignment="CENTER" font="$x1" layoutX="49.0" layoutY="21.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" />
+                        <Label fx:id="lblFileName" layoutX="6.0" layoutY="363.0" prefHeight="17.0" prefWidth="80.0" text="Dosya Adı">
                            <font>
                               <Font name="System Bold" size="12.0" />
-                           </font></Label>
-                        <Label fx:id="lblFileSize" layoutX="5.0" layoutY="390.0" prefHeight="17.0" prefWidth="64.0" text="Boyut">
+                           </font>
+                        </Label>
+                        <Label fx:id="lblFileSize" layoutX="6.0" layoutY="390.0" prefHeight="17.0" prefWidth="64.0" text="Boyut">
                            <font>
                               <Font name="System Bold" size="12.0" />
-                           </font></Label>
-                        <Label fx:id="lblModificationDate" layoutX="5.0" layoutY="418.0" prefHeight="17.0" prefWidth="106.0" text="Son Değişiklik">
+                           </font>
+                        </Label>
+                        <Label fx:id="lblModificationDate" layoutX="6.0" layoutY="418.0" prefHeight="17.0" prefWidth="106.0" text="Son Değişiklik">
                            <font>
                               <Font name="System Bold" size="12.0" />
-                           </font></Label>
-                        <Label fx:id="detailFileName" layoutX="109.0" layoutY="363.0" prefHeight="17.0" prefWidth="132.0" text="Dosya Adı">
+                           </font>
+                        </Label>
+                        <Label fx:id="detailFileName" layoutX="109.0" layoutY="363.0" prefHeight="17.0" prefWidth="132.0">
                            <tooltip>
                               <Tooltip fx:id="toolTipFileName" text="Dosya Adı" />
                            </tooltip>
                         </Label>
-                        <Label fx:id="detailFileSize" layoutX="109.0" layoutY="390.0" prefHeight="17.0" prefWidth="132.0" text="Dosya Adı">
+                        <Label fx:id="detailFileSize" layoutX="109.0" layoutY="390.0" prefHeight="17.0" prefWidth="132.0">
                            <tooltip>
                               <Tooltip fx:id="toolTipFileSize" text="Dosya Boyutu" />
                            </tooltip>
                         </Label>
-                        <Label fx:id="detailModificationDate" layoutX="109.0" layoutY="418.0" prefHeight="17.0" prefWidth="152.0" text="Dosya Adı">
+                        <Label fx:id="detailModificationDate" layoutX="109.0" layoutY="418.0" prefHeight="17.0" prefWidth="152.0">
                            <tooltip>
                               <Tooltip fx:id="toolTipModificationDate" text="Son Değişiklik" />
                            </tooltip>
                         </Label>
-                        <ListView fx:id="fileAccessorsListView" layoutX="25.0" layoutY="509.0" prefHeight="200.0" prefWidth="200.0" styleClass="sharedAccountList" />
+                        <ListView fx:id="fileAccessorsListView" layoutX="10.0" layoutY="509.0" prefHeight="245.0" prefWidth="230.0" styleClass="sharedAccountList" />
                         <Label layoutX="59.0" layoutY="475.0" prefHeight="27.0" prefWidth="132.0" text="Dosya Üyeleri" textAlignment="CENTER">
                            <font>
                               <Font size="18.0" />
@@ -201,21 +216,21 @@
                         <Separator layoutY="457.0" prefHeight="0.0" prefWidth="250.0" />
                         <Separator layoutY="320.0" prefHeight="3.0" prefWidth="250.0" />
                         <Button fx:id="fileIcon" layoutX="65.0" layoutY="121.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" styleClass="iconDefault" />
-                        <Label fx:id="lblFilePath" layoutX="5.0" layoutY="336.0" prefHeight="17.0" prefWidth="92.0" text="Dosya Dizini">
+                        <Label fx:id="lblFilePath" layoutX="6.0" layoutY="336.0" prefHeight="17.0" prefWidth="92.0" text="Dosya Dizini">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <Label fx:id="detailFilePath" layoutX="109.0" layoutY="336.0" prefHeight="17.0" prefWidth="132.0" text="Dosya Adı">
+                        <Label fx:id="detailFilePath" layoutX="109.0" layoutY="336.0" prefHeight="17.0" prefWidth="132.0">
                            <tooltip>
                               <Tooltip fx:id="toolTipFilePath" text="Dosya Adı" />
                            </tooltip>
                         </Label>
                      </children>
                   </Pane>
-                  <Pane fx:id="notificationPane" layoutY="35.0" prefHeight="323.0" prefWidth="360.0" visible="false">
+                  <Pane fx:id="notificationPane" layoutY="35.0" prefHeight="312.0" prefWidth="360.0" visible="false">
                      <children>
-                        <ListView fx:id="notificationListView" layoutY="38.0" prefHeight="291.0" prefWidth="250.0" styleClass="notificationListView" />
+                        <ListView fx:id="notificationListView" layoutY="38.0" prefHeight="282.0" prefWidth="250.0" styleClass="notificationListView" />
                         <Label layoutX="79.0" layoutY="14.0" text="Bildirimler">
                            <font>
                               <Font size="18.0" />
@@ -224,9 +239,9 @@
                         <Button fx:id="btnClearNotifications" layoutX="178.0" layoutY="15.0" maxHeight="24.0" mnemonicParsing="false" onMouseClicked="#clearNotifications" prefHeight="24.0" prefWidth="24.0" styleClass="btnClearNotification" />
                      </children>
                   </Pane>
-          </children>
-        </AnchorPane>
-      </items>
-    </SplitPane>
-  </children>
+               </children>
+            </AnchorPane>
+         </items>
+      </SplitPane>
+   </children>
 </VBox>
